--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2013-09-17  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/IllegalMonitorStateException/classInfo/getDeclaredAnnotations.java:
+	* testlet/java/lang/IllegalMonitorStateException/classInfo/getDeclaredClasses.java:
+	* testlet/java/lang/IllegalMonitorStateException/classInfo/getDeclaringClass.java:
+	* testlet/java/lang/IllegalMonitorStateException/classInfo/getEnclosingClass.java:
+	* testlet/java/lang/IllegalMonitorStateException/classInfo/getEnclosingConstructor.java:
+	* testlet/java/lang/IllegalMonitorStateException/classInfo/getEnclosingMethod.java:
+	Six new tests added into testlet/java/lang/IllegalMonitorStateException/classInfo.
+
 2013-09-16  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/ExceptionInInitializerError/getCause.java:
