--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2013-09-19  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/IllegalMonitorStateException/classInfo/isAnnotation.java:
+	* testlet/java/lang/IllegalMonitorStateException/classInfo/isAnnotationPresent.java:
+	* testlet/java/lang/IllegalMonitorStateException/classInfo/isAnonymousClass.java:
+	* testlet/java/lang/IllegalMonitorStateException/classInfo/isArray.java:
+	* testlet/java/lang/IllegalMonitorStateException/classInfo/isEnum.java:
+	Five new tests added into testlet/java/lang/IllegalMonitorStateException/classInfo.
+
 2013-09-18  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/IllegalMonitorStateException/classInfo/getSimpleName.java:
