--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2013-09-27  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/IllegalStateException/classInfo/getCanonicalName.java:
+	* testlet/java/lang/IllegalStateException/classInfo/getClasses.java:
+	* testlet/java/lang/IllegalStateException/classInfo/getComponentType.java:
+	* testlet/java/lang/IllegalStateException/classInfo/getConstructor.java:
+	* testlet/java/lang/IllegalStateException/classInfo/getConstructors.java:
+	Five new tests added into testlet/java/lang/IllegalStateException/classInfo.
+
 2013-09-26  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/IllegalStateException/classInfo/getAnnotation.java:
