--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2013-10-02  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/IllegalStateException/classInfo/isAnnotation.java:
+	* testlet/java/lang/IllegalStateException/classInfo/isAnnotationPresent.java:
+	* testlet/java/lang/IllegalStateException/classInfo/isAnonymousClass.java:
+	* testlet/java/lang/IllegalStateException/classInfo/isArray.java:
+	* testlet/java/lang/IllegalStateException/classInfo/isEnum.java:
+	Five new tests added into testlet/java/lang/IllegalStateException/classInfo.
+
 2013-10-01  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/IllegalStateException/classInfo/getDeclaredAnnotations.java:
