--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2013-10-07  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/IllegalThreadStateException/classInfo/getAnnotation.java:
+	* testlet/java/lang/IllegalThreadStateException/classInfo/getAnnotations.java:
+	* testlet/java/lang/IllegalThreadStateException/classInfo/getField.java:
+	* testlet/java/lang/IllegalThreadStateException/classInfo/getFields.java:
+	* testlet/java/lang/IllegalThreadStateException/classInfo/getMethod.java:
+	* testlet/java/lang/IllegalThreadStateException/classInfo/getMethods.java:
+	Six new tests added into testlet/java/lang/IllegalStateException/classInfo.
+
 2013-10-04  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/IllegalThreadStateException/TryCatch.java:
