--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2013-10-09  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/IllegalThreadStateException/classInfo/getDeclaredClasses.java:
+	* testlet/java/lang/IllegalThreadStateException/classInfo/getDeclaredConstructor.java:
+	* testlet/java/lang/IllegalThreadStateException/classInfo/getDeclaredConstructors.java:
+	* testlet/java/lang/IllegalThreadStateException/classInfo/getDeclaredField.java:
+	* testlet/java/lang/IllegalThreadStateException/classInfo/getDeclaredFields.java:
+	* testlet/java/lang/IllegalThreadStateException/classInfo/getDeclaredMethod.java:
+	New tests added into testlet/java/lang/IllegalStateException/classInfo.
+
 2013-10-08  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/IllegalThreadStateException/classInfo/getCanonicalName.java:
