--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2013-10-21  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/IncompatibleClassChangeError/classInfo/getField.java:
+	* testlet/java/lang/IncompatibleClassChangeError/classInfo/getFields.java:
+	* testlet/java/lang/IncompatibleClassChangeError/classInfo/getMethod.java:
+	* testlet/java/lang/IncompatibleClassChangeError/classInfo/getMethods.java:
+	* testlet/java/lang/IncompatibleClassChangeError/classInfo/getSimpleName.java:
+	* testlet/java/lang/IncompatibleClassChangeError/classInfo/getSuperclass.java:
+	Another six new tests added into testlet/java/lang/IncompatibleClassChangeError/classInfo.
+
 2013-10-18  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/IncompatibleClassChangeError/classInfo/getDeclaredConstructor.java:
