--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2013-10-22  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/IncompatibleClassChangeError/classInfo/getDeclaringClass.java:
+	* testlet/java/lang/IncompatibleClassChangeError/classInfo/getEnclosingClass.java:
+	* testlet/java/lang/IncompatibleClassChangeError/classInfo/getEnclosingConstructor.java:
+	* testlet/java/lang/IncompatibleClassChangeError/classInfo/getEnclosingMethod.java:
+	Four new tests added into testlet/java/lang/IncompatibleClassChangeError/classInfo.
+
 2013-10-21  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/IncompatibleClassChangeError/classInfo/getField.java:
