--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2013-11-05  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/IndexOutOfBoundsException/classInfo/isInterface.java:
+	* testlet/java/lang/IndexOutOfBoundsException/classInfo/isLocalClass.java:
+	* testlet/java/lang/IndexOutOfBoundsException/classInfo/isMemberClass.java:
+	* testlet/java/lang/IndexOutOfBoundsException/classInfo/isPrimitive.java:
+	* testlet/java/lang/IndexOutOfBoundsException/classInfo/isSynthetic.java:
+	Updated, make these tests to work correctly with OpenJDK7, added JDK tags etc.
+
 2013-11-04  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/IndexOutOfBoundsException/TryCatch.java:
