--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2013-11-12  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/IndexOutOfBoundsException/classInfo/getEnclosingConstructor.java:
+	* testlet/java/lang/IndexOutOfBoundsException/classInfo/getEnclosingMethod.java:
+	* testlet/java/lang/IndexOutOfBoundsException/classInfo/isAnnotationPresent.java:
+	* testlet/java/lang/IndexOutOfBoundsException/classInfo/isAnonymousClass.java:
+	* testlet/java/lang/IndexOutOfBoundsException/classInfo/isArray.java:
+	* testlet/java/lang/IndexOutOfBoundsException/classInfo/isEnum.java:
+	Six new tests added into testlet/java/lang/IndexOutOfBoundsException/classInfo.
+
 2013-11-11  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/IndexOutOfBoundsException/classInfo/getDeclaredAnnotations.java:
