--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2013-11-14  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
+	* testlet/java/lang/IndexOutOfBoundsException/classInfo/isAnnotation.java:
+	New test added into testlet/java/lang/IndexOutOfBoundsException/classInfo.
+
+2013-11-14  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
 	* testlet/java/lang/Object/classInfo/getDeclaredFields.java:
 	* testlet/java/lang/Object/classInfo/getFields.java:
 	Added (c) year.
