--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+2013-11-15  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/InstantiationError/TryCatch.java:
+	* testlet/java/lang/InstantiationError/constructor.java:
+	Updated, make these tests to work correctly with OpenJDK7, added JDK tags etc.
+	* testlet/java/lang/InstantiationError/classInfo/InstanceOf.java:
+	New test added into testlet/java/lang/InstantiationError/classInfo.
+
 2013-11-14  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/IndexOutOfBoundsException/classInfo/isAnnotation.java:
