--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2013-11-19  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/InstantiationError/classInfo/getConstructor.java:
+	* testlet/java/lang/InstantiationError/classInfo/getConstructors.java:
+	* testlet/java/lang/InstantiationError/classInfo/getDeclaredAnnotations.java:
+	* testlet/java/lang/InstantiationError/classInfo/getDeclaredClasses.java:
+	* testlet/java/lang/InstantiationError/classInfo/getDeclaredConstructor.java:
+	Another five new tests added into testlet/java/lang/InstantiationError/classInfo.
+
 2013-11-18  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/InstantiationError/classInfo/getAnnotation.java:
