--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2013-11-26  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/InstantiationError/classInfo/getEnclosingConstructor.java:
+	* testlet/java/lang/InstantiationError/classInfo/getEnclosingMethod.java:
+	* testlet/java/lang/InstantiationError/classInfo/getField.java:
+	* testlet/java/lang/InstantiationError/classInfo/getFields.java:
+	* testlet/java/lang/InstantiationError/classInfo/getMethod.java:
+	* testlet/java/lang/InstantiationError/classInfo/getMethods.java:
+	Six new tests added into testlet/java/lang/InstantiationError/classInfo.
+
 2013-11-25  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/InstantiationError/classInfo/getDeclaredConstructors.java:
