--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2013-12-05  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/InstantiationException/classInfo/getCanonicalName.java:
+	* testlet/java/lang/InstantiationException/classInfo/getSuperclass.java:
+	* testlet/java/lang/InstantiationException/classInfo/isAnonymousClass.java:
+	* testlet/java/lang/InstantiationException/classInfo/isArray.java:
+	* testlet/java/lang/InstantiationException/classInfo/isAssignableFrom.java:
+	* testlet/java/lang/InstantiationException/classInfo/isEnum.java:
+	* testlet/java/lang/InstantiationException/classInfo/isInstance.java:
+	Added new tests, updated existing tests, make these tests to work correctly with
+	OpenJDK7, added JDK tags etc.
+
 2013-12-04  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/InstantiationException/classInfo/getClasses.java:
