--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2013-12-06  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
+	* testlet/java/security/MessageDigest/BasicMessageDigestAlgorithms.java:
+	Added test for checking if JVM supports the following standard MessageDigest algorithms:
+	MD5, SHA-1 and SHA-256.
+
+2013-12-06  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
 	* testlet/java/lang/InterruptedException/TryCatch.java:
 	* testlet/java/lang/InterruptedException/constructor.java:
 	* testlet/java/lang/InterruptedException/classInfo/InstanceOf.java:
