--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2013-12-13  Pavel Tisnovsky  <ptisnovs@redhat.com>
+
+	* testlet/java/lang/InterruptedException/classInfo/getAnnotation.java:
+	* testlet/java/lang/InterruptedException/classInfo/getAnnotations.java:
+	* testlet/java/lang/InterruptedException/classInfo/getCanonicalName.java:
+	* testlet/java/lang/InterruptedException/classInfo/getClasses.java:
+	* testlet/java/lang/InterruptedException/classInfo/getComponentType.java:
+	Added five new tests into InterruptedException/classInfo.
+
 2013-12-12  Pavel Tisnovsky  <ptisnovs@redhat.com>
 
 	* testlet/java/lang/InterruptedException/classInfo/getDeclaredAnnotations.java:
